vpc/eip.tf
################################################################################
# Elastic IP for NAT Gateway
################################################################################
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "${var.project}-${var.env}-eip-nat"
  }
}
